RESOLVED FIXED42271
[chromium] PopupMenu labels are not very visible when selected
https://bugs.webkit.org/show_bug.cgi?id=42271
Summary [chromium] PopupMenu labels are not very visible when selected
Jay Civelli
Reported 2010-07-14 10:54:45 PDT
- In Chromium, trigger the form autofill popup on a form - The label on the right of the text is displayed in gray. - Select the entry with the label. Expected: The text and label colors change so that they can be read with the selection background Actual: Only the text color changes, the label is still gray and is hard to read on the selection background
Attachments
Initial patch (2.10 KB, patch)
2010-07-15 15:51 PDT, Jay Civelli
levin: review-
Applying Dave Levin's suggested changes. (2.18 KB, patch)
2010-07-15 17:06 PDT, Jay Civelli
no flags
Jay Civelli
Comment 1 2010-07-15 15:51:07 PDT
Created attachment 61738 [details] Initial patch
James Hawkins
Comment 2 2010-07-15 15:53:17 PDT
LGTM, thanks.
David Levin
Comment 3 2010-07-15 15:56:15 PDT
Comment on attachment 61738 [details] Initial patch > Index: WebCore/ChangeLog > + (WebCore::PopupListBox::paintRow): A short comment here would be nice. > Index: WebCore/platform/chromium/PopupMenuChromium.cpp > + gc->setFillColor(textColor, DeviceColorSpace); labelColor (as discussed).
David Holloway
Comment 4 2010-07-15 15:57:53 PDT
LGTM.
Jay Civelli
Comment 5 2010-07-15 17:06:10 PDT
Created attachment 61749 [details] Applying Dave Levin's suggested changes.
WebKit Commit Bot
Comment 6 2010-07-15 18:33:49 PDT
Comment on attachment 61749 [details] Applying Dave Levin's suggested changes. Clearing flags on attachment: 61749 Committed r63504: <http://trac.webkit.org/changeset/63504>
WebKit Commit Bot
Comment 7 2010-07-15 18:33:55 PDT
All reviewed patches have been landed. Closing bug.
Zhenyao Mo
Comment 8 2010-07-15 18:39:38 PDT
Note You need to log in before you can comment on or make changes to this bug.