2010-07-15  Jay Civelli  <jcivelli@chromium.org>

Reviewed by David Levin.

        [chromium] Making the popup label color visible when the item is
        selected.
        https://bugs.webkit.org/show_bug.cgi?id=42271

        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupListBox::paintRow): paint the label text with a
        different color when it is selected.

Canonical link: https://commits.webkit.org/54344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63504 268f45cc-cd09-0410-ab3c-d52691b4dbfc