WebCore/html/canvas/WebGLRenderingContext.h
@@ -509,8 +509,9 @@ class WebKitCSSMatrix;
         bool validateUniformMatrixParameters(const WebGLUniformLocation* location, bool transpose, Float32Array* v, int mod);
         bool validateUniformMatrixParameters(const WebGLUniformLocation* location, bool transpose, void* v, int size, int mod);
 
-        // Helper function to validate usage for bufferData.
-        bool validateBufferDataUsage(unsigned long);
+        // Helper function to validate parameters for bufferData.
+        // Return the current bound buffer to target, or 0 if parameters are invalid.
+        WebGLBuffer* validateBufferDataParameters(unsigned long target, unsigned long usage);
 
         // Helper functions for vertexAttribNf{v}.
         void vertexAttribfImpl(unsigned long index, int expectedSize, float v0, float v1, float v2, float v3);
